# faculty

./: README.md
Mobile/ArhitectureExample/app/: build.gradle
Mobile/AwesomeProject/: App.js
Mobile/Expenses/app/: build.gradle
Mobile/ExpensesReact/: App.js  app.json
Mobile/FirstApp/app/: build.gradle
Mobile/counter/app/: build.gradle
VVSS/: note.xml  studenti.xml  teme.xml
arduino/pwm/: CMakeLists.txt
joc_backtracking/: input.txt  input_helped_1.txt  input_helped_2.txt  input_test.txt  main.py
lftc/lab1/: gcc.py  language_specifications.txt
lftc/lab1/input/: circle.cpp  sum.cpp  test.cpp
lftc/lab1/output/: circle_const_table.txt  circle_id_table.txt  circle_pif.txt  sum_id_table.txt  sum_pif.txt  test_const_table.txt  (+2 more)
lftc/lab2/: finite_automata.py  grammer.py  main.py
lftc/lab3/: language_specification.txt
lftc/lab4/: Lr0Parser.py  gcc.py  grammer.py  main.py
lftc/lab5/: hello  lex.yy.c  project.l  project.y  y.tab.c  y.tab.h
mures/rand/: CMakeLists.txt  main.cpp
ppd/: .gitignore
ppd/PPD/lab4/: CMakeLists.txt
ppd/doamne_ajuta_sa_trecem/: CMakeLists.txt  big.cpp  comb.cpp  convulsion.cpp  erathostene.cpp  hamilton.cpp  k_coloring.cpp  main.cpp  sum.cpp
ppd/lab1/: Account.cpp  Account.h  Bank.cpp  Bank.h  CMakeLists.txt  Transaction.cpp  Transaction.h  main.cpp  stats.txt  utils.cpp  utils.h
ppd/lab2/: CMakeLists.txt  Matrix.cpp  Matrix.h  main.cpp  results.txt  utils.cpp  utils.h
ppd/lab4/: main.cpp  utils.cpp  utils.h
ppd/lab5/: pdp_lab5.sln
shit/: junk.js
shit/graph/: main.py
vvss/: pom.xml
vvss22/: pom.xml
(+121 files in other folders)
